[project]
name = "my-knowledge-mcp"
version = "0.1.0"
description = "A custom MCP server for fuzzy searching local knowledge files"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "langchain-text-splitters>=0.2.2",
]

[project.scripts]
knowledge-mcp = "custom_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_mcp_server.py"]